# b3p

./: .gitignore  404.html  LICENSE.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/: ci.yml
.github/workflows/: docs.yml  publish.yml  python-publish.yml  test.yml
api/ccblade/: index.html
b3p/: __init__.py  __main__.py  add_load_to_mesh.py  add_te_solids.py  anba4_prep.py  anba4_solve.py  b3p_cli.py  b3p_run.py  blade.py  blade_section.py  build_blade_geometry.py  build_blade_structure.py  build_plybook.py  ccblade_run.py  ccx2vtu.py  ccxpost.py  cli.py  cli2.py  combine_meshes.py  drape_mesh.py  drape_summary.py  frd2vtu.py  frdbin2vtu.py  geom_utils.py  geometry_blade_shape.py  geometry_section.py  geometry_web.py  loft_utils.py  mesh2ccx.py  mesh_2d.py  mesh_2d_general.py  mesh_from_loft.py  plot_ccx.py  splining.py  webs.py  yml_portable.py
b3p/anba/: anba4_prep.py  anba4_solve.py  mesh_2d.py
b3p/bem/: ccblade_run.py
b3p/ccx/: ccx2vtu.py  ccxpost.py  mesh2ccx.py  plot_ccx.py
b3p/cli/: app_state.py  build_app.py  ccblade_app.py  ccx_app.py  clean_app.py  two_d_app.py  utils.py
b3p/core/: add_load_to_mesh.py  blade.py  build_blade_geometry.py  build_blade_structure.py  geometry_blade_shape.py  geometry_section.py  mesh_from_loft.py  webs.py
b3p/geometry/: blade.py  build_blade_geometry.py  geom_utils.py  geometry_blade_shape.py  geometry_web.py  loft_utils.py  splining.py
b3p/laminates/: build_plybook.py  drape_mesh.py  drape_summary.py
b3p/mesh/: add_load_to_mesh.py  add_te_solids.py  build_blade_structure.py  combine_meshes.py  mesh_from_loft.py  webs.py
contributing/: index.html
docs/: build.md  contributing.md  fea.md  index.md  installation.md  support.md  usage.md
docs/api/: ccblade.md
docs/examples/: blade_test.md  test_run.md
docs/use/: anba.md  build.md  fea.md  inputfile.md
examples/: blade_test.yml  blade_test_si.yml  convert_yaml.py  laminates_v0.yml  loads_v0.yml  makefile  materials.yml  materials_iso.yml  materials_si.yml  runex.sh  runtest.cmd  test_solid.sh  test_workflow.sh
examples/blade_test/: index.html
examples/test_run/: index.html
installation/: index.html
scripts/: anba4_wsl_setup.sh  ccblade_install.py
search/: search_index.json
src/b3p/: __main__.py  portable_json.py  yml_portable.py
src/b3p/anba/: anba4_solve.py
src/b3p/bem/: ccblade_run.py
src/b3p/ccx/: ccx2vtu.py  ccxpost.py  failcrit.py  failcrit_mesh.py  failcrit_vec.py  mesh2ccx.py  plot_ccx.py
src/b3p/cli/: __init__.py  app_state.py  build_app.py  ccblade_app.py  ccx_app.py  clean_app.py  main.py  two_d_app.py  utils.py  validate_app.py  yml_portable.py
src/b3p/geometry/: blade.py  build_blade_geometry.py  geometry_blade_shape.py  geometry_section.py  geometry_web.py  loft_utils.py  splining.py
src/b3p/laminates/: build_plybook.py  drape_mesh.py  drape_summary.py
src/b3p/materials/: aniso_material.py  iso_material.py
src/b3p/mesh/: add_load_to_mesh.py  add_te_solids.py  build_blade_structure.py  combine_meshes.py
src/b3p/models/: __init__.py  config.py  defaults.yaml  matdb.py  materials.py
support/: index.html
tests/: __init__.py  conftest.py  test_2d.py  test_b3p_workflow.py  test_bondline_model.py  test_build.py  test_ccblade.py  test_ccx.py  test_combine.py  test_drape.py  test_geometry.py  test_models.py  test_plybook.py  test_structure.py  utils.py
tests/data/: ccblade_output.csv  laminate_sums.json  test_blade_csv.csv  test_blade_mass.csv
tests/data/reference_2d_meshes/: msec_100.xdmf  msec_1000.xdmf  msec_100000.xdmf  msec_12000.xdmf  msec_15000.xdmf  msec_2000.xdmf  msec_25000.xdmf  msec_45000.xdmf  msec_500.xdmf  msec_5000.xdmf  msec_60000.xdmf  msec_8000.xdmf  msec_80000.xdmf
usage/: index.html
use/anba/: index.html
use/fea/: index.html
use/inputfile/: index.html
utils/: drape_plot.py  slab_plot.py  slabplot.py  windio_plot.py  yml_portable.py
