[tool.poetry]
authors = ["wr1 <8971152+wr1@users.noreply.github.com>"]
description = "Command line tools for preprocessing of wind turbine blade models"
include = ["examples/*.yml", "examples/makefile"]
license = "MIT"
name = "b3p"
packages = [{include = "b3p"}]
readme = "README.md"
version = "0.1.2"

[tool.poetry.dependencies]
# ccblade = {git = "https://github.com/wr1/CCBlade.git"}
# ccblade = {path = "/home/wr1/projects/CCBlade"}
frd2vtu = ">=0.1.3"
h5py = "^3.11.0"
jinja2 = "^3.1.4"
meshio = "^5.3.5"
mkdocs-material = "^9.6.1"
numpy = ">2.0.0"
pandas = "^2.2.3"
pyarrow = ">18.*"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
python = ">=3.10,<4.0.0"
pyvista = ">=0.43.5"
pyyaml = "^6.0.2"
ruamel-yaml = ">=0.18.6"
scipy = "^1.13.0"
sympy = "^1.13.3"
tqdm = "^4.66.5"
vtk = ">=9.3,<9.4"

# [tool.poetry.group.dev.dependencies]
# meson = "^1.6.0"
# ninja = "^1.11.1.1"
# pytest-mock = "^3.10.0"

# [tool.poetry.extras]
# ccblade = ["ccblade"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
  "ninja",
  "setuptools",
]

[tool.poetry.scripts]
b3p = "b3p.__main__:main"
ccblade_install = "scripts.ccblade_install:build_ccblade_dependency"
