[metadata]
name = b3p
version = 0.1
author = wr1
author_email= wrbld3@gmail.com
description = Preprocessor for composite blades (for e.g. wind turbines)
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/wr1/b3p
project_urls =
    Bug Tracker = 
    Documentation = 
    Source Code = 
license = MIT

[options]
packages = find:
include_package_data=True
install_requires = 
    argparse
    vtk
    numpy
    vedo



